src/assets/styles/styles.css
/* ... */
.footer {
  padding: 2rem 0;
  border-top: .5rem solid hsl(0, 91%, 50%);
  color: white;
}

.footer-brand {
  display: block;
  margin-bottom: 1rem;
  font-size: 1.25rem;
  font-weight: 900;
  letter-spacing: 1px;
}

.footer-brand:hover {
  text-decoration: none;
}

.footer > .container {
  padding-left: 2rem;
}

.footer a {
  color: hsl(218, 100%, 65%);
}

.footer a:hover,
.footer a:focus {
  color: hsl(50, 100%, 50%);
}

.footer a:visited {
  color: hsl(277, 85%, 65%);
}

